added some content

--- a/index.html
+++ b/index.html
@@ -7,9 +7,56 @@
     <title>Document</title>
     <link rel="stylesheet" href="style/main.css">
 </head>
-<body>
-    <div class="pink">
+<body class="body" >
+   <header>
+       <!-- ////////////full view section///////////// -->
+       <section class="full-view">
 
-    </div>
+           
+
+        <div class="heaader-navigation"> 
+            <div class="header-wrapper">
+                <ul class="header-ul">
+                    <li class="header-li">
+                        <a class="header-a" href="">HOME</a>
+                    </li>
+                    <li class="header-li">
+                     <a class="header-a" href="">ABOUT</a>
+                 </li>
+                 <li class="header-li3">
+                     <a class="header-a" href="">MORE</a>
+                 </li>
+                </ul>
+            </div>
+        </div>
+       </section>
+        <!-- ////////////////resp view header////////////////// -->
+       <!-- <section class="resp-view">
+           <div>
+               <div>
+                   <ul>
+                       <li>
+                           <a href="">HOME</a>
+                       </li>
+                       <li>
+                        <a href="">ABOUT</a>
+                    </li>
+                    <li>
+                        <a href="">MORE</a>
+                    </li>
+                   </ul>
+               </div>
+           </div>
+       </section> -->
+   </header>
+   <div class="header-img">
+    <img class="header-logo"   src="images/black-wond.png" alt="">
+</div>
+
+<button class="get-started">
+    <a class="button-text" href=""></a>
+</button>
+
+    <script src="script.js"></script>
 </body>
 </html>
